--- a/style.css
+++ b/style.css
@@ -5,9 +5,15 @@
 }
 html {
     font-size: 62.5%;
+    font-family: 'Raleway', sans-serif;
 }
 body {
-    background-color:  #85c1e9 ;
+    background-color:  #C7D7D9 ;
+}
+h1 {
+    color: #260B01;
+    font-size: 2rem;
+    padding: 10px;
 }
 .mapadiv {
     width: 60%;
